--- a/index_ref.html
+++ b/index_ref.html
@@ -55,7 +55,7 @@
 								</ul>
 							</li>
 							<li><a class="mdl-navigation__link" data-scroll href="#references_sec">references</a></li>
-							<li><a class="mdl-navigation__link" data-scroll href="#contact_sec">contact</a></li>
+							<li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">contact</a></li>
 						</ul>
 						<!-- Right aligned menu below button -->
 						<button id="demo-menu-lower-right"
@@ -178,7 +178,7 @@
 								</li>	
 								
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#contact_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
 										<i class="zmdi zmdi-email pr-15"></i>
 										<span class="font-capitalize">contact</span>
 									</a>
@@ -253,7 +253,7 @@
 													<h5 class="mt-20 font-grey">UI/UX Designer & Front End Developer</h5>
 													<div class="mt-30">
 														<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="#">download cv</a>
-														<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white" href="#contact_sec" data-scroll>contact</a>
+														<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white" href="#achievement_sec" data-scroll>contact</a>
 													</div>
 												</div>
 												<ul class="profile-wrap mt-50">
@@ -904,7 +904,7 @@
 						<!--/Price Sec-->
 						
 						<!--Contact Sec-->
-						<section id="contact_sec" class="contact-sec sec-pad-top-sm">
+						<section id="achievement_sec" class="contact-sec sec-pad-top-sm">
 							<h2 class="mb-35">contact</h2>
 							<div class="row">
 								<div id="form_card_height" class="col-sm-7 mb-30">
