--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 							<li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#skills_sec">skills</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#experience_sec">experience</a></li>
-							<li><a class="mdl-navigation__link" data-scroll href="#blog_sec">certifications</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#education_sec">education</a></li>
+							<li><a class="mdl-navigation__link" data-scroll href="#blog_sec">certifications</a></li>
+							<li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">achievements</a></li>
 							<!-- <li><span id="blog_drp" class="mdl-navigation__link">blog</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
 									data-mdl-for="blog_drp">
@@ -52,7 +53,6 @@
 								</ul>
 							</li> -->
 							<li><a class="mdl-navigation__link" data-scroll href="#references_sec">references</a></li>
-							<li><a class="mdl-navigation__link" data-scroll href="#contact_sec">contact</a></li>
 						</ul>
 						<!-- Right aligned menu below button -->
 						<button id="demo-menu-lower-right"
@@ -140,36 +140,34 @@
 									</a>
 								</li>
 								<li>
+									<a class="mdl-navigation__link border-top-sep" data-scroll href="#education_sec">
+										<i class="zmdi zmdi-library pr-15"></i>
+										<span class="font-capitalize">education</span>
+									</a>
+								</li>
+								<li>
 									<a class="mdl-navigation__link border-top-sep" data-scroll href="#blog_sec">
 										<i class="zmdi zmdi-case pr-15"></i>
 										<span class="font-capitalize">certifications</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#education_sec">
-										<i class="zmdi zmdi-library pr-15"></i>
-										<span class="font-capitalize">education</span>
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
+										<i class="zmdi zmdi-email pr-15"></i>
+										<span class="font-capitalize">achievements</span>
 									</a>
 								</li>
-
 								<li>
 									<a class="mdl-navigation__link border-top-sep" data-scroll href="#references_sec">
 										<i class="zmdi zmdi-bookmark pr-15"></i>
 										<span class="font-capitalize">references</span>
 									</a>
 								</li>
-
-								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#contact_sec">
-										<i class="zmdi zmdi-email pr-15"></i>
-										<span class="font-capitalize">contact</span>
-									</a>
-								</li>
 							</ul>
 						</div>
-						<div class="drawer-footer mt-50 mb-30 text-center">
+						<!-- <div class="drawer-footer mt-50 mb-30 text-center">
 							<p class="font-12 mt-10">Abdullah &copy; 2017.</p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<!--/Left Sidebar-->
@@ -585,116 +583,6 @@
 						</section>
 						<!--/Experience Sec-->
 
-						<!--Certifications Sec-->
-						<section id="blog_sec" class="blog-sec sec-pad-top-sm">
-							<h2 class="mb-30">Certifications</h2>
-							<div class="row">
-								<div class="col-sm-4 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<!-- <div class="mdl-card__title pa-0">
-											<div class="blog-img blog-2"></div>
-										</div> -->
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-												<h4 class="mt-15 mb-20">Diploma in Business Analysis with Specialization in Retail Management</h4>
-											</a>
-											<p>...</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
-												<i class="zmdi zmdi-book-image"></i>
-											</a>
-										</div>
-										<!-- <div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">15.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>
-											<button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_2">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div> -->
-									</div>
-								</div>
-								<div class="col-sm-4 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<!-- <div class="mdl-card__title pa-0">
-											<div class="blog-img blog-2"></div>
-										</div> -->
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-												<h4 class="mt-15 mb-20">Domain Leadership</h4>
-											</a>
-											<p>...</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
-												<i class="zmdi zmdi-book-image"></i>
-											</a>
-										</div>
-										<!-- <div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">15.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>
-											<button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_2">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div> -->
-									</div>
-								</div>
-								<!-- <div class="col-sm-4 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<div class="mdl-card__title pa-0">
-											<div class="blog-img blog-3"></div>
-										</div>
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">science</span>
-											<a href="gallery-blog-post.html">
-												<h4 class="mt-15 mb-20">Grand canyon mysteries</h4>
-											</a>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="gallery-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-green mdl-shadow--8dp">
-												<i class="zmdi zmdi-collection-image-o"></i>
-											</a>
-										</div>
-										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">9.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>
-											<button id ="share_menu_3" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_3">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div>
-									</div>
-								</div> -->
-							</div>
-							<!-- <div class="text-center mt-20 mb-30">
-								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="blog-list.html">view all</a>
-							</div> -->
-						</section>
-						<!--/Certifications Sec-->
-
 						<!--Education Sec-->
 						<section id="education_sec" class="education-sec sec-pad-top-sm">
 							<h2 class="mb-30">education</h2>
@@ -748,6 +636,112 @@
 							</div>
 						</section>
 						<!--/Education Sec-->
+
+						<!--Certifications Sec-->
+						<section id="blog_sec" class="blog-sec sec-pad-top-sm">
+							<h2 class="mb-30">Certifications</h2>
+							<div class="row">
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+												<h4 class="mt-15 mb-20">Diploma in Business Analysis with Specialization in Retail Management</h4>
+											</a>
+											<!-- <p>...</p> -->
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-book-image"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="">
+												<h4 class="mt-15 mb-20">Certificate in Sales and Marketing Management</h4>
+											</a>
+											<!-- <p>...</p> -->
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-book-image"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk/">
+												<h4 class="mt-15 mb-20">Domain Leadership</h4>
+											</a>
+											<!-- <p>...</p> -->
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-book-image"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="text-center mt-20 mb-30">
+								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="#">view all</a>
+							</div>
+						</section>
+						<!--/Certifications Sec blog-list.html-->
+
+						<!--Achievements Sec-->
+						<section id="achievement_sec" class="blog-sec sec-pad-top-sm">
+							<h2 class="mb-30">Achievements</h2>
+							<div class="row">
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+												<h4 class="mt-15 mb-20">Graphic Designer</h4>
+											</a>
+											<p>Awarded in recognition of my work as a Graphic Designer</p>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-yellow mdl-shadow--8dp">
+												<i class="zmdi zmdi-star-circle"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+												<h4 class="mt-15 mb-20">Slide Master</h4>
+											</a>
+											<p>Awarded in appreciation of my skill and art of creating amazing slides and presentations</p>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-yellow mdl-shadow--8dp">
+												<i class="zmdi zmdi-star-circle"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+												<h4 class="mt-15 mb-20">Special Initiative</h4>
+											</a>
+											<p>Awarded in appreciation of my outstanding contribution to the organisation and for being an inspiring role model to my colleagues</p>
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-yellow mdl-shadow--8dp">
+												<i class="zmdi zmdi-star-circle"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="text-center mt-20 mb-30">
+								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="#">view all</a>
+							</div>
+						</section>
+						<!--/Achievements Sec achievements-list.html-->
 
 						<!--Interest Sec-->
 						<section id="interest_sec" class="interest-sec sec-pad-top-sm">
