--- a/vimeo-blog-post.html
+++ b/vimeo-blog-post.html
@@ -55,7 +55,7 @@
 								</ul>
 							</li>
 							<li><a class="mdl-navigation__link" href="index.html#references_sec">references</a></li>
-							<li><a class="mdl-navigation__link" href="index.html#contact_sec">contact</a></li>
+							<li><a class="mdl-navigation__link" href="index.html#achievement_sec">contact</a></li>
 						</ul>
 						<!-- Right aligned menu below button -->
 						<button id="demo-menu-lower-right"
@@ -178,7 +178,7 @@
 								</li>	
 								
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep"  href="index.html#contact_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep"  href="index.html#achievement_sec">
 										<i class="zmdi zmdi-email pr-15"></i>
 										<span class="font-capitalize">contact</span>
 									</a>
