--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 												<span class="institution">Tata Consultancy Services</span>
 											</div>
 											<div class="timeline-body">
-												<p class="mt-25">I was a Senior Developer for Optumera™. It is a shopper-centric merchandise optimization suite which helps to cluster stores, right space categories in the stores and create compelling assortment. The suite is developed on open source technologies and leverages big data platform – Hadoop™ and Eco-system Tools. I primarily worked on Macrospace™ and the corresponding Admin Module. I was involved in all the stages (Implementation, Testing, Go Live and Support) of the project and have hands on experience with UATs and critical Go Live situations.</p>
+												<p class="mt-25">I was a Senior Developer for Optumera™, a shopper-centric merchandise optimization suite which helps to cluster stores, right space categories in the stores and create compelling assortment. I was involved in all the stages (Implementation, Testing, Go Live and Support) of the project and had hands on experience with UATs and critical Go Live situations.</p>
 											</div>
 										</div>
 									</li>
@@ -589,7 +589,9 @@
 							<div class="timeline-wrap overflow-hide mb-30">
 								<ul class="timeline">
 									<li>
-										<div class="timeline-badge bg-blue no-icon"></div>
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-graduation-cap font-blue"></i>
+										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-blue">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Post-Graduate Diploma in Management</h4>
@@ -600,7 +602,10 @@
 									</li>
 
 									<li class="timeline-inverted">
-										<div class="timeline-badge bg-green no-icon"></div>
+										<!-- <div class="timeline-badge bg-green no-icon"></div> -->
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-edit font-green"></i>
+										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 border-top-green">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Bachelor of Technology</h4>
@@ -612,7 +617,10 @@
 									</li>
 
 									<li>
-										<div class="timeline-badge bg-yellow no-icon"></div>
+										<!-- <div class="timeline-badge bg-yellow no-icon"></div> -->
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-file-text font-yellow"></i>
+										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-yellow">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Intermediate</h4>
