--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li><a class="mdl-navigation__link" data-scroll href="#education_sec">education</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#blog_sec">certifications</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">achievements</a></li>
+							<li><a class="mdl-navigation__link" data-scroll href="#portfolio_sec">Portfolio</a></li>
 							<!-- <li><span id="blog_drp" class="mdl-navigation__link">blog</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
 									data-mdl-for="blog_drp">
@@ -135,7 +136,7 @@
 								</li>
 								<li>
 									<a class="mdl-navigation__link border-top-sep" data-scroll href="#experience_sec">
-										<i class="zmdi zmdi-shield-check pr-15"></i>
+										<i class="zmdi zmdi-case pr-15"></i>
 										<span class="font-capitalize">experience</span>
 									</a>
 								</li>
@@ -147,14 +148,20 @@
 								</li>
 								<li>
 									<a class="mdl-navigation__link border-top-sep" data-scroll href="#blog_sec">
-										<i class="zmdi zmdi-case pr-15"></i>
+										<i class="zmdi zmdi-shield-check pr-15"></i>
 										<span class="font-capitalize">certifications</span>
 									</a>
 								</li>
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
-										<i class="zmdi zmdi-email pr-15"></i>
+										<i class="zmdi zmdi-star-circle pr-15"></i>
 										<span class="font-capitalize">achievements</span>
+									</a>
+								</li>
+								<li>
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#portfolio_sec">
+										<i class="zmdi zmdi-group-work pr-15"></i>
+										<span class="font-capitalize">Portfolio</span>
 									</a>
 								</li>
 								<li>
@@ -537,7 +544,7 @@
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-blue">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Business Analyst</h4>
-												<span class="duration mb-5">Dec 2016 - present</span>
+												<span class="duration mb-5">Dec 2016 - Jun 2016</span>
 												<span class="institution">Tata Consultancy Services</span>
 											</div>
 											<div class="timeline-body">
@@ -548,9 +555,9 @@
 
 									<li class="timeline-inverted">
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-case font-green"></i>
+											<i class="zmdi zmdi-case font-blue"></i>
 										</div>
-										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 border-top-green">
+										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 border-top-blue">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Developer</h4>
 												<span class="duration mb-5">Sep 2014 — Dec 2016</span>
@@ -590,12 +597,12 @@
 								<ul class="timeline">
 									<li>
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-graduation-cap font-blue"></i>
+											<i class="zmdi zmdi-graduation-cap font-green"></i>
 										</div>
-										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-blue">
+										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-green">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Post-Graduate Diploma in Management</h4>
-												<span class="duration mb-5">Pursuing | 2017 - 2019</span>
+												<span class="duration mb-5">Pursuing | Jun 2017 - Present</span>
 												<span class="institution">Narsee Monjee Institute of Management Studies</span>
 											</div>
 										</div>
@@ -604,9 +611,9 @@
 									<li class="timeline-inverted">
 										<!-- <div class="timeline-badge bg-green no-icon"></div> -->
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-edit font-green"></i>
+											<i class="zmdi zmdi-edit font-blue"></i>
 										</div>
-										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 border-top-green">
+										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 border-top-blue">
 											<div class="timeline-heading">
 												<h4 class="mb-10">Bachelor of Technology</h4>
 												<h6 class="mb-10">Electronics and Communication Engineering</h6>
@@ -751,6 +758,68 @@
 						</section>
 						<!--/Achievements Sec achievements-list.html-->
 
+						<!--Portfolio Sec-->
+						<section id="portfolio_sec" class="blog-sec sec-pad-top-sm">
+							<h2 class="mb-30">a glimpse of my work</h2>
+							<div class="row">
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__title pa-0">
+											<div class="blog-img blog-1"></div>
+										</div>
+										<div class="mdl-card__supporting-text relative">
+											<!-- <span class="blog-cat">Photography</span> -->
+											<a href="https://www.instagram.com/the.final.shot/">
+												<h4 class="mt-15 mb-20">Photography</h4>
+											</a>
+											<p>Look at the world through my lens</p>
+											<a href="http://thefinalshot.getforge.io/" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp ">
+												<i class="zmdi zmdi-image-o"></i>
+												<div class="mdl-tooltip" data-mdl-for="tt100">
+													behance
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__title pa-0">
+											<div class="blog-img blog-2"></div>
+										</div>
+										<div class="mdl-card__supporting-text relative">
+											<!-- <span class="blog-cat">Designs</span> -->
+											<a href="image-blog-post.html">
+												<h4 class="mt-15 mb-20">Designs</h4>
+											</a>
+											<p>My design gallery</p>
+											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-brush"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__title pa-0">
+											<div class="blog-img blog-3"></div>
+										</div>
+										<div class="mdl-card__supporting-text relative">
+											<!-- <span class="blog-cat">Blogs</span> -->
+											<a href="gallery-blog-post.html">
+												<h4 class="mt-15 mb-20">Blogs</h4>
+											</a>
+											<p>My write-ups</p>
+											<a href="gallery-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-green mdl-shadow--8dp">
+												<i class="zmdi zmdi-edit"></i>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</section>
+						<!--/Portfolio Sec-->
+
 						<!--Interest Sec-->
 						<section id="interest_sec" class="interest-sec sec-pad-top-sm">
 							<h2 class="mb-30">interests</h2>
@@ -769,26 +838,26 @@
 								</div>
 								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
 									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
+										<i class="zmdi zmdi-accounts-add"></i>
+										<span>Volunteering</span>
+									</div>
+								</div>
+								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
+									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
 										<i class="zmdi zmdi-radio"></i>
 										<span>music</span>
 									</div>
 								</div>
 								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
 									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
+										<i class="zmdi zmdi-airplane"></i>
+										<span>travelling</span>
+									</div>
+								</div>
+								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
+									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
 										<i class="zmdi zmdi-edit"></i>
 										<span>writing</span>
-									</div>
-								</div>
-								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
-										<i class="zmdi zmdi-library"></i>
-										<span>reading</span>
-									</div>
-								</div>
-								<div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-									<div class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30">
-										<i class="zmdi zmdi-airplane"></i>
-										<span>traveling</span>
 									</div>
 								</div>
 							</div>
@@ -915,5 +984,6 @@ You will suit any job that you land or rather any job that lands on you will sui
 		<script src="js/jquery.slimscroll.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxXt2P7-U38bK0xEFIT-ebZJ1ngK8wjww"></script>
 		<script src="js/init.js"></script>
+
 	</body>
 </html>
