--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 									<li>
 										<!-- <div class="timeline-badge bg-yellow no-icon"></div> -->
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-file-text font-yellow"></i>
+											<i class="zmdi zmdi-library font-yellow"></i>
 										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 border-top-yellow">
 											<div class="timeline-heading">
@@ -692,7 +692,7 @@
 												<h4 class="mt-15 mb-20">Domain Leadership</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -700,10 +700,10 @@
 								</div>
 							</div>
 							<div class="text-center mt-20 mb-30">
-								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="#">view all</a>
+								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="blog-list.html">view all</a>
 							</div>
 						</section>
-						<!--/Certifications Sec blog-list.html-->
+						<!--/Certifications Sec-->
 
 						<!--Achievements Sec-->
 						<section id="achievement_sec" class="blog-sec sec-pad-top-sm">
@@ -753,13 +753,76 @@
 								</div>
 							</div>
 							<div class="text-center mt-20 mb-30">
-								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="#">view all</a>
+								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="achievements-list.html">view all</a>
 							</div>
 						</section>
-						<!--/Achievements Sec achievements-list.html-->
+						<!--/Achievements Sec-->
 
 						<!--Portfolio Sec-->
-						<section id="portfolio_sec" class="blog-sec sec-pad-top-sm">
+						<!--Event Sec-->
+						<section id="portfolio_sec" class="education-sec sec-pad-top-sm">
+							<h2 class="mb-30">Events Organized</h2>
+							<div class="timeline-wrap overflow-hide mb-30">
+								<ul class="timeline">
+									<li>
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-assignment-account font-green"></i>
+										</div>
+										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 ">
+											<div class="timeline-heading">
+												<h4 class="mb-10">TCS - Ceridian Innovation Week</h4>
+												<span class="duration mb-5">Mar 2017</span>
+												<span class="institution">Tata Consultancy Services</span>
+											</div>
+										</div>
+									</li>
+
+									<li class="timeline-inverted">
+										<!-- <div class="timeline-badge bg-green no-icon"></div> -->
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-assignment-account font-blue"></i>
+										</div>
+										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 ">
+											<div class="timeline-heading">
+												<h4 class="mb-10">TechnoFun</h4>
+												<span class="duration mb-5">Nov 2016 - Dec 2016</span>
+												<span class="institution">Tata Consultancy Services</span>
+											</div>
+										</div>
+									</li>
+
+									<li>
+										<!-- <div class="timeline-badge bg-yellow no-icon"></div> -->
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-assignment-account font-yellow"></i>
+										</div>
+										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 ">
+											<div class="timeline-heading">
+												<h4 class="mb-10">Family Day</h4>
+												<span class="duration mb-5">May 2016</span>
+												<span class="institution">Tata Consultancy Services</span>
+											</div>
+										</div>
+									</li>
+									<li class="timeline-inverted">
+										<!-- <div class="timeline-badge bg-red no-icon"></div> -->
+										<div class="timeline-badge">
+											<i class="zmdi zmdi-assignment-account font-orange"></i>
+										</div>
+										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 ">
+											<div class="timeline-heading">
+												<h4 class="mb-10">Vibhor</h4>
+												<span class="duration mb-5">Mar 2014</span>
+												<span class="institution">Rameshwaram Institute of Technology and Management</span>
+											</div>
+										</div>
+									</li>
+									<li class="clearfix no-float"></li>
+								</ul>
+							</div>
+						</section>
+						<!--/Events Sec-->
+						<section id="portfolio_sec2" class="blog-sec sec-pad-top-sm">
 							<h2 class="mb-30">a glimpse of my work</h2>
 							<div class="row">
 								<div class="col-sm-4 mb-30">
@@ -912,7 +975,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 
 						<!--Footer Sec-->
 						<footer class="footer-sec sec-pad-top-sm sec-pad-bottom text-center">
-							<h4>thank you for visiting.</h4>
+							<h4>thank you for visiting</h4>
 							<!-- <p class="mt-10">Abdullah 2017. All rights reserved.</p> -->
 								<ul class="social-icons mt-10">
 									<li>
