modded index, accomplishments and added awards page

--- a/awards.html
+++ b/awards.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Honors</title>
+		<title>Awards</title>
 
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -192,104 +192,63 @@
 					<div class="container">
 						<!--Achievements Sec-->
 						<section id="blog_sec" class="blog-sec mt-180 mt-sm-120">
-							<h2 class="mb-30 font-white">Honors</h2>
+							<h2 class="mb-30 font-white">Awards</h2>
 							<div class="row">
+
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-												<h4 class="mt-15 mb-20">Graphic Designer</h4>
+											<a href="">
+												<h4 class="mt-15 mb-20">Mailer Designing Competition</h4>
 											</a>
-											<p>Awarded in recognition of my work as a Graphic Designer</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-												<i class="zmdi zmdi-case"></i>
+											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+												<i class="zmdi zmdi-star"></i>
 											</a>
 										</div>
 									</div>
 								</div>
+
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-												<h4 class="mt-15 mb-20">Slide Master</h4>
+											<a href="">
+												<h4 class="mt-15 mb-20">Calligraphy Competition</h4>
 											</a>
-											<p>Awarded in appreciation of my skill and art of creating amazing slides and presentations</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-												<i class="zmdi zmdi-case"></i>
+											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+												<i class="zmdi zmdi-star"></i>
 											</a>
 										</div>
 									</div>
 								</div>
+
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-												<h4 class="mt-15 mb-20">Special Initiative</h4>
+											<a href="">
+												<h4 class="mt-15 mb-20">Public Speaking Competition</h4>
 											</a>
-											<p>Awarded in appreciation of my outstanding contribution to the organisation and for being an inspiring role model to my colleagues</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-												<i class="zmdi zmdi-case"></i>
+											<p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+												<i class="zmdi zmdi-star	"></i>
 											</a>
 										</div>
 									</div>
 								</div>
+
+								<br>
+								<br>
+
 						</div>
-<br>
-<br>
-				<!-- Row 2 -->
-				<div class="row">
-					<div class="col-sm-4 mb-30">
-						<div class="mdl-card mdl-shadow--2dp pa-0">
-							<div class="mdl-card__supporting-text relative">
-								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-									<h4 class="mt-15 mb-20">ILP Kudos</h4>
-								</a>
-								<p>Awarded in appreciation of my performance in the Initial Learning Program (ILP)</p>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-									<i class="zmdi zmdi-case"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 mb-30">
-						<div class="mdl-card mdl-shadow--2dp pa-0">
-							<div class="mdl-card__supporting-text relative">
-								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-									<h4 class="mt-15 mb-20">Best Team</h4>
-								</a>
-								<p>Awarded in acknowledgment of showing up excellency towards "on time delivery" and "quality", and presenting flexibility to work above and beyond prescribed duties regularly, showcasing technical expertise, creating automated tools to ease the work and reduce manual efforts and project life cycle duration.</p>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-									<i class="zmdi zmdi-case"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 mb-30">
-						<div class="mdl-card mdl-shadow--2dp pa-0">
-							<div class="mdl-card__supporting-text relative">
-								<span class="blog-cat">Rameshwaram Institute of
-									<br>Technology and Management</span>
-								<a href="">
-									<h4 class="mt-15 mb-20">College Topper</h4>
-								</a>
-								<!-- <p></p> -->
-								<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-									<i class="zmdi zmdi-graduation-cap"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-			</div>
 
 
 							<div class="navigation-block mb-30">
-								<!-- <a href="#" class="inline-block pull-left prev"><i class="zmdi zmdi-arrow-left font-blue"></i></a> -->
-								<a href="awards.html" class="inline-block pull-right next"><i class="zmdi zmdi-arrow-right font-blue"></i></a>
+								<a href="achievements-list.html" class="inline-block pull-left prev"><i class="zmdi zmdi-arrow-left font-blue"></i></a>
+								<!-- <a href="awards.html" class="inline-block pull-right next"><i class="zmdi zmdi-arrow-right font-blue"></i></a> -->
 								<div class="clearfix"></div>
 							</div>
 						</section>
