--- a/blog-list.html
+++ b/blog-list.html
@@ -32,16 +32,24 @@
 				<header class="mdl-layout__header">
 					<div class="mdl-layout__header-row mdl-scroll-spy-1">
 						<!-- Title -->
-						<a href="index.html"><span class="mdl-layout-title">Abdullah</span></a>
+						<a href="index.html" href="index.html#body"><span class="mdl-layout-title">Abdullah</span></a>
 						<div class="mdl-layout-spacer"></div>
 						<ul class="nav mdl-navigation mdl-layout--large-screen-only">
-							<li><a class="mdl-navigation__link" href="index.html#body">about</a></li>
+							<!-- <li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li> -->
 							<li><a class="mdl-navigation__link" href="index.html#skills_sec">skills</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#experience_sec">experience</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#education_sec">education</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#blog_sec">certifications</a></li>
-							<li><a class="mdl-navigation__link" href="index.html#achievement_sec">achievements</a></li>
-							<li><a class="mdl-navigation__link" href="index.html#portfolio_sec">Portfolio</a></li>
+							<!-- <li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">accomplishments</a></li> -->
+
+							<li><span id="accomplishments_drp" class="mdl-navigation__link">accomplishments</span>
+								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+									data-mdl-for="accomplishments_drp">
+									<li class="mdl-menu__item"><a href="achievements-list.html">Honors</a></li>
+									<li class="mdl-menu__item"><a href="awards.html">Awards</a></li>
+								</ul>
+							</li>
+							<li><a class="mdl-navigation__link" href="index.html#portfolio_sec">highlights</a></li>
 							<!-- <li><span id="blog_drp" class="mdl-navigation__link">blog</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
 									data-mdl-for="blog_drp">
@@ -155,13 +163,13 @@
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
 										<i class="zmdi zmdi-star-circle pr-15"></i>
-										<span class="font-capitalize">achievements</span>
+										<span class="font-capitalize">accomplishments</span>
 									</a>
 								</li>
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#portfolio_sec">
 										<i class="zmdi zmdi-group-work pr-15"></i>
-										<span class="font-capitalize">Portfolio</span>
+										<span class="font-capitalize">highlights</span>
 									</a>
 								</li>
 								<li>
