--- a/index.html
+++ b/index.html
@@ -32,27 +32,25 @@
 				<header class="mdl-layout__header">
 					<div class="mdl-layout__header-row mdl-scroll-spy-1">
 						<!-- Title -->
-						<a href="index.html"><span class="mdl-layout-title">Abdullah</span></a>
+						<a href="index.html" data-scroll href="#body"><span class="mdl-layout-title">Abdullah</span></a>
 						<div class="mdl-layout-spacer"></div>
 						<ul class="nav mdl-navigation mdl-layout--large-screen-only">
-							<li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li>
+							<!-- <li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li> -->
 							<li><a class="mdl-navigation__link" data-scroll href="#skills_sec">skills</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#experience_sec">experience</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#education_sec">education</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#blog_sec">certifications</a></li>
-							<li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">achievements</a></li>
-							<li><a class="mdl-navigation__link" data-scroll href="#portfolio_sec">Portfolio</a></li>
-							<!-- <li><span id="blog_drp" class="mdl-navigation__link">blog</span>
+							<!-- <li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">accomplishments</a></li> -->
+
+							<li><span id="accomplishments_drp" class="mdl-navigation__link">accomplishments</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
-									data-mdl-for="blog_drp">
-									<li class="mdl-menu__item"><a href="blog-list.html">Blog List</a></li>
-									<li class="mdl-menu__item"><a href="image-blog-post.html">Image Blog Post</a></li>
-									<li class="mdl-menu__item"><a href="gallery-blog-post.html">Gallery Blog Post</a></li>
-									<li class="mdl-menu__item"><a href="youtube-blog-post.html">Youtube Blog Post</a></li>
-									<li class="mdl-menu__item"><a href="vimeo-blog-post.html">Vimeo Blog Post</a></li>
-									<li class="mdl-menu__item"><a href="audio-blog-post.html">Audio Blog Post</a></li>
+									data-mdl-for="accomplishments_drp">
+									<li class="mdl-menu__item"><a href="achievements-list.html">Honors</a></li>
+									<li class="mdl-menu__item"><a href="awards.html">Awards</a></li>
 								</ul>
-							</li> -->
+							</li>
+
+							<li><a class="mdl-navigation__link" data-scroll href="#portfolio_sec">highlights</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#references_sec">references</a></li>
 						</ul>
 						<!-- Right aligned menu below button -->
@@ -79,7 +77,7 @@
 							<span class="candidate-name block mb-10 text-center">Abdulah Saghir Ahmad</span>
 							<ul class="social-icons  mb-30">
 								<li>
-									<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+									<a class="facebook-link" href="https://www.facebook.com/profile.php?id=100001184335390&ref=br_rs" target="_blank">
 										<i id="tt11" class="zmdi zmdi-facebook"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt11">
 											facebook
@@ -87,7 +85,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056">
+									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056" target="_blank">
 										<i id="tt13" class="zmdi zmdi-linkedin"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt13">
 											linkedin
@@ -95,7 +93,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+									<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 										<i id="tt15" class="zmdi zmdi-instagram"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt15">
 											instagram
@@ -103,7 +101,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 										<i id="tt12" class="zmdi zmdi-brush"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt12">
 											deviantArt
@@ -111,7 +109,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 										<i id="tt14" class="zmdi zmdi-behance"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt14">
 											behance
@@ -155,13 +153,25 @@
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
 										<i class="zmdi zmdi-star-circle pr-15"></i>
-										<span class="font-capitalize">achievements</span>
+										<span class="font-capitalize">accomplishments</span>
 									</a>
 								</li>
+
+								<!-- <li>
+									<a class="mdl-navigation__link border-top-sep" href="javascript:void(0);" data-toggle="collapse" data-target="#accomplishments_dr">
+										<i class="zmdi zmdi-star-circle pr-15"></i>
+										<span class="font-capitalize">accomplishments</span>
+									</a>
+									<ul id="accomplishments_dr" class="collapse collapse-level-1">
+										<li><a class="mdl-navigation__link border-top-sep" href="achievements-list.html">Honors</a></li>
+										<li><a class="mdl-navigation__link border-top-sep" href="awards.html">Awards</a></li>
+									</ul>
+								</li> -->
+
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#portfolio_sec">
 										<i class="zmdi zmdi-group-work pr-15"></i>
-										<span class="font-capitalize">Portfolio</span>
+										<span class="font-capitalize">highlights</span>
 									</a>
 								</li>
 								<li>
@@ -193,7 +203,7 @@
 												<div class="candidate-img mb-35"></div>
 												<ul class="social-icons">
 													<li>
-														<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+														<a class="facebook-link" href="https://www.facebook.com/profile.php?id=100001184335390&ref=br_rs" target="_blank">
 															<i id="tt1" class="zmdi zmdi-facebook"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt1">
 																facebook
@@ -201,7 +211,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/">
+														<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/" target="_blank">
 															<i id="tt3" class="zmdi zmdi-linkedin"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt3">
 																linkedin
@@ -209,7 +219,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+														<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 															<i id="tt5" class="zmdi zmdi-instagram"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt5">
 																instagram
@@ -217,7 +227,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+														<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 															<i id="tt2" class="zmdi zmdi-brush"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt2">
 																deviantArt
@@ -225,7 +235,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+														<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 															<i id="tt4" class="zmdi zmdi-behance"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt4">
 																behance
@@ -660,11 +670,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
 												<h4 class="mt-15 mb-20">Diploma in Business Analysis with Specialization in Retail Management</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -688,11 +698,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk/">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk/" target="_blank">
 												<h4 class="mt-15 mb-20">Domain Leadership</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -705,19 +715,19 @@
 						</section>
 						<!--/Certifications Sec-->
 
-						<!--Achievements Sec-->
+						<!--accomplishments Sec-->
 						<section id="achievement_sec" class="blog-sec sec-pad-top-sm">
-							<h2 class="mb-30">Achievements</h2>
+							<h2 class="mb-30">accomplishments</h2>
 							<div class="row">
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
 												<h4 class="mt-15 mb-20">Graphic Designer</h4>
 											</a>
 											<p>Awarded in recognition of my work as a Graphic Designer</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -727,11 +737,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
 												<h4 class="mt-15 mb-20">Slide Master</h4>
 											</a>
 											<p>Awarded in appreciation of my skill and art of creating amazing slides and presentations</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -741,11 +751,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
 												<h4 class="mt-15 mb-20">Special Initiative</h4>
 											</a>
 											<p>Awarded in appreciation of my outstanding contribution to the organisation and for being an inspiring role model to my colleagues</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -756,7 +766,7 @@
 								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="achievements-list.html">view all</a>
 							</div>
 						</section>
-						<!--/Achievements Sec-->
+						<!--/accomplishments Sec-->
 
 						<!--Portfolio Sec-->
 						<!--Event Sec-->
@@ -823,7 +833,7 @@
 						</section>
 						<!--/Events Sec-->
 						<section id="portfolio_sec2" class="blog-sec sec-pad-top-sm">
-							<h2 class="mb-30">a glimpse of my work</h2>
+							<h2 class="mb-30">Work Gallery</h2>
 							<div class="row">
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -832,11 +842,11 @@
 										</div>
 										<div class="mdl-card__supporting-text relative">
 											<!-- <span class="blog-cat">Photography</span> -->
-											<a href="https://www.instagram.com/the.final.shot/">
+											<a href="https://www.instagram.com/the.final.shot/"  target="_blank">
 												<h4 class="mt-15 mb-20">Photography</h4>
 											</a>
 											<p>Look at the world through my lens</p>
-											<a href="http://thefinalshot.getforge.io/" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp ">
+											<a href="http://thefinalshot.getforge.io/" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp ">
 												<i class="zmdi zmdi-image-o"></i>
 												<div class="mdl-tooltip" data-mdl-for="tt100">
 													behance
@@ -979,7 +989,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 							<!-- <p class="mt-10">Abdullah 2017. All rights reserved.</p> -->
 								<ul class="social-icons mt-10">
 									<li>
-										<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+										<a class="facebook-link" href="https://www.facebook.com/profile.php?id=100001184335390&ref=br_rs" target="_blank">
 											<i id="tt6" class="zmdi zmdi-facebook"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt6">
 												facebook
@@ -987,7 +997,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 										</a>
 									</li>
 									<li>
-										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/">
+										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/" target="_blank">
 											<i id="tt8" class="zmdi zmdi-linkedin"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt8">
 												linkedin
@@ -995,7 +1005,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 										</a>
 									</li>
 									<li>
-										<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+										<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 											<i id="tt9" class="zmdi zmdi-instagram"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt9">
 												instagram
@@ -1003,7 +1013,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 										</a>
 									</li>
 									<li>
-										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 											<i id="tt7" class="zmdi zmdi-brush"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt7">
 												deviantArt
@@ -1011,7 +1021,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 										</a>
 									</li>
 									<li>
-										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 											<i id="tt10" class="zmdi zmdi-behance"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt10">
 												behance
