modded index, accomplishments and added awards page

--- a/achievements-list.html
+++ b/achievements-list.html
@@ -162,7 +162,7 @@
 								</li>
 								<li>
 									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
-										<i class="zmdi zmdi-case pr-15"></i>
+										<i class="zmdi zmdi-star-circle pr-15"></i>
 										<span class="font-capitalize">accomplishments</span>
 									</a>
 								</li>
