--- a/blog-list.html
+++ b/blog-list.html
@@ -35,12 +35,12 @@
 						<a href="index.html" href="index.html#body"><span class="mdl-layout-title">Abdullah</span></a>
 						<div class="mdl-layout-spacer"></div>
 						<ul class="nav mdl-navigation mdl-layout--large-screen-only">
-							<!-- <li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li> -->
+							<!-- <li><a class="mdl-navigation__link" href="#body">about</a></li> -->
 							<li><a class="mdl-navigation__link" href="index.html#skills_sec">skills</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#experience_sec">experience</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#education_sec">education</a></li>
 							<li><a class="mdl-navigation__link" href="index.html#blog_sec">certifications</a></li>
-							<!-- <li><a class="mdl-navigation__link" data-scroll href="#achievement_sec">accomplishments</a></li> -->
+							<!-- <li><a class="mdl-navigation__link" href="#achievement_sec">accomplishments</a></li> -->
 
 							<li><span id="accomplishments_drp" class="mdl-navigation__link">accomplishments</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
@@ -131,49 +131,49 @@
 						<div class="mdl-scroll-spy-2">
 							<ul class="mdl-navigation">
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#body">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#body">
 										<i class="zmdi zmdi-border-color pr-15"></i>
 										<span class="font-capitalize">about</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#skills_sec">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#skills_sec">
 										<i class="zmdi zmdi-cutlery pr-15"></i>
 										<span class="font-capitalize">skills</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#experience_sec">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#experience_sec">
 										<i class="zmdi zmdi-case pr-15"></i>
 										<span class="font-capitalize">experience</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#education_sec">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#education_sec">
 										<i class="zmdi zmdi-library pr-15"></i>
 										<span class="font-capitalize">education</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#blog_sec">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#blog_sec">
 										<i class="zmdi zmdi-shield-check pr-15"></i>
 										<span class="font-capitalize">certifications</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#achievement_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	 href="index.html#achievement_sec">
 										<i class="zmdi zmdi-star-circle pr-15"></i>
 										<span class="font-capitalize">accomplishments</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	data-scroll  href="#portfolio_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	 href="index.html#portfolio_sec">
 										<i class="zmdi zmdi-group-work pr-15"></i>
 										<span class="font-capitalize">highlights</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep" data-scroll href="#references_sec">
+									<a class="mdl-navigation__link border-top-sep" href="index.html#references_sec">
 										<i class="zmdi zmdi-bookmark pr-15"></i>
 										<span class="font-capitalize">references</span>
 									</a>
