--- a/awards.html
+++ b/awards.html
@@ -131,49 +131,49 @@
 						<div class="mdl-scroll-spy-2">
 							<ul class="mdl-navigation">
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#body">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#body">
 										<i class="zmdi zmdi-border-color pr-15"></i>
 										<span class="font-capitalize">about</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#skills_sec">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#skills_sec">
 										<i class="zmdi zmdi-cutlery pr-15"></i>
 										<span class="font-capitalize">skills</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#experience_sec">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#experience_sec">
 										<i class="zmdi zmdi-case pr-15"></i>
 										<span class="font-capitalize">experience</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#education_sec">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#education_sec">
 										<i class="zmdi zmdi-library pr-15"></i>
 										<span class="font-capitalize">education</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#blog_sec">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#blog_sec">
 										<i class="zmdi zmdi-shield-check pr-15"></i>
 										<span class="font-capitalize">certifications</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	  href="#achievement_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep"  href="index.html#achievement_sec">
 										<i class="zmdi zmdi-star-circle pr-15"></i>
 										<span class="font-capitalize">accomplishments</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	  href="#portfolio_sec">
+									<a class="mdl-navigation__link border-top-sep border-bottom-sep" 	  href="index.html#portfolio_sec">
 										<i class="zmdi zmdi-group-work pr-15"></i>
 										<span class="font-capitalize">highlights</span>
 									</a>
 								</li>
 								<li>
-									<a class="mdl-navigation__link border-top-sep"  href="#references_sec">
+									<a class="mdl-navigation__link border-top-sep"  href="index.html#references_sec">
 										<i class="zmdi zmdi-bookmark pr-15"></i>
 										<span class="font-capitalize">references</span>
 									</a>
@@ -204,47 +204,144 @@
 											</a>
 											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
 											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
-												<i class="zmdi zmdi-star"></i>
+												<i class="zmdi zmdi-mail-send"></i>
 											</a>
 										</div>
 									</div>
 								</div>
 
-								<div class="col-sm-4 mb-30">
+                <div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
 											<a href="">
-												<h4 class="mt-15 mb-20">Calligraphy Competition</h4>
+												<h4 class="mt-15 mb-20">Pictorial Quiz Contest</h4>
 											</a>
 											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
 											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
-												<i class="zmdi zmdi-star"></i>
+												<i class="zmdi zmdi-puzzle-piece"></i>
 											</a>
 										</div>
 									</div>
 								</div>
 
-								<div class="col-sm-4 mb-30">
+                <div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
 											<a href="">
-												<h4 class="mt-15 mb-20">Public Speaking Competition</h4>
+												<h4 class="mt-15 mb-20">IRC Week Crossword Contest</h4>
 											</a>
-											<p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
-												<i class="zmdi zmdi-star	"></i>
+											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+												<i class="zmdi zmdi-edit"></i>
 											</a>
 										</div>
 									</div>
 								</div>
-
-								<br>
-								<br>
-
 						</div>
+<br>
+<br>
+<!--Row 2-->
+<div class="row">
 
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Word Search</h4>
+        </a>
+        <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+          <i class="zmdi zmdi-search"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Calligraphy Competition</h4>
+        </a>
+        <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+          <i class="zmdi zmdi-brush"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Dumb Charades</h4>
+        </a>
+        <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+          <i class="zmdi zmdi-volume-off"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Row 2 ends-->
+<br>
+<br>
+<!--Row 3-->
+<div class="row">
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Public Speaking Competition</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-accounts	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Extempore</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-volume-up	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Tata Consultancy Services</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Information Security Charades</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-volume-off	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Row 3 ends-->
 
 							<div class="navigation-block mb-30">
 								<a href="achievements-list.html" class="inline-block pull-left prev"><i class="zmdi zmdi-arrow-left font-blue"></i></a>
