--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 								<ul class="timeline">
 									<li>
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-assignment-account font-green"></i>
+											<i class="zmdi zmdi-lamp font-green"></i>
 										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 ">
 											<div class="timeline-heading">
@@ -790,7 +790,7 @@
 									<li class="timeline-inverted">
 										<!-- <div class="timeline-badge bg-green no-icon"></div> -->
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-assignment-account font-blue"></i>
+											<i class="zmdi zmdi-memory font-blue"></i>
 										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 ">
 											<div class="timeline-heading">
@@ -804,7 +804,7 @@
 									<li>
 										<!-- <div class="timeline-badge bg-yellow no-icon"></div> -->
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-assignment-account font-yellow"></i>
+											<i class="zmdi zmdi-camera-front font-yellow"></i>
 										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp pt-30 pb-30 ">
 											<div class="timeline-heading">
@@ -817,7 +817,7 @@
 									<li class="timeline-inverted">
 										<!-- <div class="timeline-badge bg-red no-icon"></div> -->
 										<div class="timeline-badge">
-											<i class="zmdi zmdi-assignment-account font-orange"></i>
+											<i class="zmdi zmdi-toys font-orange"></i>
 										</div>
 										<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 ">
 											<div class="timeline-heading">
